<resources>
    <string name="app_name">BeFit</string>
    <string name="register_button">Don\'t have an account?<b> SignUp Here</b></string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_button">Already have an account?<b> SignIn Here</b></string>
    <string name="goback"><b>← Go Back</b></string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BeFit - Health and Fitness</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Training_Plans">Training Plans</string>
    <string name="reports">Reports</string>
    <string name="reminders">Reminders</string>
    <string name="goals">Goals</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>