<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_baseline_plan_24"
            android:title="@string/Training_Plans" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/reports" />
        <item
            android:id="@+id/reminders"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/reminders" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_baseline_goal_fixed_24"
            android:title="@string/goals" />

    </group>
</menu>