<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.befit_healthandfitnessapplication.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_plans"
        android:name="com.example.befit_healthandfitnessapplication.ui.plans.PlansFragment"
        android:label="@string/Training_Plans"
        tools:layout="@layout/plans_fragment" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.befit_healthandfitnessapplication.ui.reports.ReportsFragment"
        android:label="@string/reports"
        tools:layout="@layout/reports_fragment" />

    <fragment
        android:id="@+id/nav_goals"
        android:name="com.example.befit_healthandfitnessapplication.ui.goals.GoalsFragment"
        android:label="@string/goals"
        tools:layout="@layout/goals_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.befit_healthandfitnessapplication.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" />

</navigation>